# rust-graphql-elm-tailwind-boilerplate

./: .cursorrules  .gitignore  Cargo.toml  LICENSE  README.md  package.json
backend/: .env.example  Cargo.toml
backend/src/: main.rs
backend/src/graphql/schema/: context.rs  mod.rs
backend/src/graphql/users/: input_types.rs  queries.rs
frontend/: elm.js  elm.json  generate-elm-graphql.sh  index.html  package.json  tailwind.config.js
frontend/elm-stuff/0.19.1/: Api-InputObject.elmi  Api-InputObject.elmo  Api-Mutation.elmi  Api-Mutation.elmo  Api-Object-User.elmi  Api-Object-UserMutations.elmi  Api-Object-UserMutations.elmo  Api-Object-UserQueries.elmo  Api-Object.elmi  Api-Object.elmo  Api-Query.elmi  Api-Query.elmo  Dashboard.elmi  Dashboard.elmo  Main.elmi  Main.elmo  Transactions.elmi  Transactions.elmo
frontend/elm-stuff/generated-code/elm-community/elm-test/0.19.1-revision12/: dependencies.c2ba2b9c23c6147d76d19af0682a399b3773f7a7d630c9ec5bfea7146bd33b66.json  elm.json
frontend/src/: Main.elm
frontend/src/Api/: InputObject.elm  Mutation.elm  Query.elm
frontend/src/Api/Object/: UserMutations.elm
frontend/styles/: output.css
src/: main.rs
src/db/: database.rs  mod.rs
src/elm/: package.json
src/elm/src/: Main.elm
src/elm/src/Api/: Object.elm
src/elm/src/Api/Object/: User.elm  UserQueries.elm
src/elm/styles/: output.css
src/graphql/: mod.rs
src/graphql/schema/: context.rs
src/graphql/users/: mod.rs  mutations.rs  queries.rs  types.rs
(+14 files in other folders)
