[package]
name = "graphql"
version = "0.1.0"
edition = "2021"
default-run = "graphql"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
juniper = "0.15"
juniper_actix = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = "0.4"
dotenv = "0.15"
