[package]
name = "rust-graphql-elm-tailwind"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-graphql = "6.0"
async-graphql-axum = "6.0"
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
dotenv = "0.15"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }

[dev-dependencies]
cargo-watch = "8.4.1"
